# home-monorepo

./: .flake8  .gitignore  README.md  pyproject.toml
apps/auth/: .env  .env.example  .env_dk  .env_example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
apps/auth/alembic/: env.py
apps/auth/alembic/versions/: f02f6b7058b2_initial.py
apps/auth/auth/: config.py  main.py
apps/auth/auth/client/: green_api.py  redis.py
apps/auth/auth/controller/: README.md  auth.py  health.py  models.py
apps/auth/auth/ini/: README.md  api.py
apps/auth/auth/repository/: db.py
apps/auth/core/: const.py  main.py  schema.py  validators.py
apps/auth/core/data_base/: database.py  orm.py  settings.py  triggers.py  utils.py
apps/auth/core/in_memory/: app_status.py
apps/auth/core/units/application/: __init__.py  crud.py  model.py  router.py  schema.py
apps/auth/core/units/controller/: auth.py  health.py
apps/auth/core/units/domain/: README.md
apps/auth/core/units/login/: __init__.py  const.py  crud.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  sender.py
apps/auth/tests/: conftest.py
apps/auth/tests/tests/: test_application.py  test_example.py
core/: main.py
core/data_base/: init.py  orm.py
data_base/: .env.example  database.py  settings.py  utils.py
deploy/helm/home-app/: Chart.yaml  values.yaml
deploy/helm/home-app/etc/kong/plugins/custom-auth/: access.lua  handler.lua  schema.lua
deploy/helm/home-app/templates/: configmap.yaml  kong-gateway.yaml  service.yaml
deploy/local-sandbox/: .env_dk  docker-compose.yml
deploy/local-sandbox/kong/declarative/: kong.yaml
tests/: conftest.py
tests/tests/: test_example.py
